--- a/Index.html
+++ b/Index.html
@@ -41,108 +41,131 @@
     </nav>
     <section class="fotos">
         <!-- Aquí puedes agregar tus imágenes -->
-        <img src="/Imagenes/La Huequita Quiteña.png" alt="La Huequita" style="width: 100%">
-    </section>
-    <section class="productos-mas-vendidos">
-        <h2>Productos Más Vendidos</h2>
-        <div class="producto" data-producto="Vino-Tinto">
-            <h3>Vino Tinto Reserva</h3>
-            <p>Precio: $30</p>
-            <button class="agregar-carrito">Agregar al carrito</button>
-        </div>
-        <div class="producto" data-producto="Cerveza-IPA">
-            <h3>Cerveza Artesanal IPA</h3>
-            <p>Precio: $12</p>
-            <button class="agregar-carrito">Agregar al carrito</button>
-        </div>
-        <div class="producto" data-producto="Vino-Tinto">
-            <h3>Vino Tinto Reserva</h3>
-            <p>Precio: $30</p>
-            <button class="agregar-carrito">Agregar al carrito</button>
-        </div>
-        <div class="producto" data-producto="Cerveza-IPA">
-            <h3>Cerveza Artesanal IPA</h3>
-            <p>Precio: $12</p>
-            <button class="agregar-carrito">Agregar al carrito</button>
-        </div>
-        <div class="producto" data-producto="Vino-Tinto">
-            <h3>Vino Tinto Reserva</h3>
-            <p>Precio: $30</p>
-            <button class="agregar-carrito">Agregar al carrito</button>
-        </div>
-        <div class="producto" data-producto="Cerveza-IPA">
-            <h3>Cerveza Artesanal IPA</h3>
-            <p>Precio: $12</p>
-            <button class="agregar-carrito">Agregar al carrito</button>
-        </div>
-        <!-- Agrega más productos más vendidos ficticios aquí -->
-    </section>
-    <section class="Promociones">
-        <h2>Promociones</h2>
-        <div class="producto" data-producto="Combo-de-Norteño-CocaCola-V220">
-            <h3>Combo de Norteño, CocaCola y V220</h3>
-            <p>Precio: $12</p>
-            <button class="agregar-carrito">Agregar al carrito</button>
-        </div>
-        <div class="producto" data-producto="Combo-de-Jhony-Red-Label-mas-Guitig">
-            <h3>Combo de Jhony Rojo mas Guitig</h3>
-            <p>Precio: $30</p>
-            <button class="agregar-carrito">Agregar al carrito</button>
-        </div>
-        <div class="producto" data-producto="Combo-de-Norteño-CocaCola-V220">
-            <h3>Combo de Norteño, CocaCola y V220</h3>
-            <p>Precio: $12</p>
-            <button class="agregar-carrito">Agregar al carrito</button>
-        </div>
-        <div class="producto" data-producto="Combo-de-Jhony-Red-Label-mas-Guitig">
-            <h3>Combo de Jhony Rojo mas Guitig</h3>
-            <p>Precio: $30</p>
-            <button class="agregar-carrito">Agregar al carrito</button>
-        </div>
-                <div class="producto" data-producto="Combo-de-Norteño-CocaCola-V220">
-            <h3>Combo de Norteño, CocaCola y V220</h3>
-            <p>Precio: $12</p>
-            <button class="agregar-carrito">Agregar al carrito</button>
-        </div>
-        <div class="producto" data-producto="Combo-de-Jhony-Red-Label-mas-Guitig">
-            <h3>Combo de Jhony Rojo mas Guitig</h3>
-            <p>Precio: $30</p>
-            <button class="agregar-carrito">Agregar al carrito</button>
-        </div>
-        <!-- Agrega más productos más vendidos ficticios aquí -->
-    </section>
-    <main>
-        <section class="productos">
-            <div class="producto" data-id="1">
-                <h3>Whisky Glenfiddich 12 años</h3>
-                <p>Precio: $45</p>
-                <button class="agregar-carrito">Agregar al carrito</button>
-            </div>
-            <div class="producto" data-id="2">
-                <h3>Ron Diplomático Reserva Exclusiva</h3>
-                <p>Precio: $35</p>
-                <button class="agregar-carrito">Agregar al carrito</button>
-            </div>
-            <div class="producto" data-id="3">
-                <h3>Gin Bombay Sapphire</h3>
-                <p>Precio: $25</p>
-                <button class="agregar-carrito">Agregar al carrito</button>
-            </div>
-            <!-- Agregar más productos aquí -->
-        </section>
-        <section class="carrito">
-            <!-- Carrito de compras -->
-            <h2>Carrito de Compras</h2>
-            <ul id="carrito-lista">
-                <!-- Los elementos del carrito se agregarán aquí dinámicamente -->
-            </ul>
-            <p>Total: <span id="carrito-total">$0</span></p>
-        </section>
+        <img src="/Imagenes/La Huequita Quiteña.png" alt="La Huequita" style="width: 100%">    </section>
     </main>
 
-    <footer>
-        <p>&copy; 2023 La Huequita Quiteña</p>
-    </footer>
+    <div class="productos">
+        <div class="producto">
+            <img src="Imagenes/24563415.webp" alt="Jhonnie Rojo" style="width: 100%;">
+            <h2>Jhonnie rojo</h2>
+            <p>Precio: $25</p>
+            <button class="agregar">Agregar al Carrito</button>
+        </div>
+        <div class="producto">
+            <img src="Imagenes/Aguardiente antioqueño.jpg" alt="Antioqueño" style="width: 100%;">
+            <h2>Antioqueño</h2>
+            <p>Precio: $25</p>
+            <button class="agregar">Agregar al Carrito</button>
+        </div>
+        <div class="producto">
+            <img src="Imagenes/Ron Abuelo.jpg" alt="Ron Abuelo" style="width: 100%;">
+            <h2>Ron Estelar</h2>
+            <p>Precio: $25</p>
+            <button class="agregar">Agregar al Carrito</button>
+        </div>
+        <div class="producto">
+            <img src="Imagenes/Whisky-John-Morris-Black-1000ml.png" alt="Jhon Morris" style="width: 100%;">
+            <h2>Jhon Morris Negro 1L</h2>
+            <p>Precio: $25</p>
+            <button class="agregar">Agregar al Carrito</button>
+        </div>
+        <div class="producto">
+            <img src="Imagenes/Whisky-John-Morris-Black-1000ml.png" alt="Jhon Morris" style="width: 100%;">
+            <h2>Jhon Morris Negro 750</h2>
+            <p>Precio: $25</p>
+            <button class="agregar">Agregar al Carrito</button>
+        </div>
+        <div class="producto">
+            <img src="Imagenes/jaggermeister.webp" alt="JaggerMeister" style="width: 100%;">
+            <h2>JaggerMeister</h2>
+            <p>Precio: $25</p>
+            <button class="agregar">Agregar al Carrito</button>
+        </div>
+        <div class="producto">
+            <img src="Imagenes/whisky-something-special-1l0-1450x1450.png" alt="Wisky Something" style="width: 100%;">
+            <h2>Wisky Something</h2>
+            <p>Precio: $25</p>
+            <button class="agregar">Agregar al Carrito</button>
+        </div>
+        <div class="producto">
+            <img src="Imagenes/NORTEÑO-PREVIA-MINIATURA.jpg" alt="Norteño" style="width: 100%;">
+            <h2>Norteño 750 ml</h2>
+            <p>Precio: $25</p>
+            <button class="agregar">Agregar al Carrito</button>
+        </div>
+        <div class="producto">
+            <img src="Imagenes/Norteño de media.jpg" alt="Jhonnie Rojo" style="width: 100%;">
+            <h2>Norteño 375 ml</h2>
+            <p>Precio: $25</p>
+            <button class="agregar">Agregar al Carrito</button>
+        </div>
+        <div class="producto">
+            <img src="Imagenes/GreenMate.jpg" alt="Green Mate" style="width: 100%;">
+            <h2>Green Mate</h2>
+            <p>Precio: $25</p>
+            <button class="agregar">Agregar al Carrito</button>
+        </div>
+        <div class="producto">
+            <img src="Imagenes/Ron ronero" alt="Ron Ronero" style="width: 100%;">
+            <h2>Ron Ronero/h2>
+            <p>Precio: $25</p>
+            <button class="agregar">Agregar al Carrito</button>
+        </div>
+        <div class="producto">
+            <img src="Imagenes/Ballantines.jpg" alt="Ballantines" style="width: 100%;">
+            <h2>Ballantines</h2>
+            <p>Precio: $25</p>
+            <button class="agregar">Agregar al Carrito</button>
+        </div>
+        <div class="producto">
+            <img src="Imagenes/Vino alta gama.png" alt="Vino alta Gama" style="width: 100%;">
+            <h2>Vino Alta Gama</h2>
+            <p>Precio: $25</p>
+            <button class="agregar">Agregar al Carrito</button>
+        </div>
+        <div class="producto">
+            <img src="Imagenes/vino maipo.png" alt="Vino Maipo" style="width: 100%;">
+            <h2>Vino Maipo Cabernet</h2>
+            <p>Precio: $25</p>
+            <button class="agregar">Agregar al Carrito</button>
+        </div>
+        <div class="producto">
+            <img src="Imagenes/Vino Maipo Merlot.jpg" alt="Vino Maipo" style="width: 100%;">
+            <h2>Vino Maipo Merlot</h2>
+            <p>Precio: $25</p>
+            <button class="agregar">Agregar al Carrito</button>
+        </div>
+        <div class="producto">
+            <img src="Imagenes/Old times Rojo.webp" alt="Old Times Rojo" style="width: 100%;">
+            <h2>Wisky Old Times Rojo</h2>
+            <p>Precio: $25</p>
+            <button class="agregar">Agregar al Carrito</button>
+        </div>
+        <div class="producto">
+            <img src="Imagenes/Old Times Negro.webp" alt="Old Times Negro" style="width: 100%;">
+            <h2>Wisky Old Times Negro</h2>
+            <p>Precio: $25</p>
+            <button class="agregar">Agregar al Carrito</button>
+        </div>
+        <div class="producto">
+            <img src="Black Owl" alt="Black Owl" style="width: 100%;">
+            <h2>Black Owl</h2>
+            <p>Precio: $25</p>
+            <button class="agregar">Agregar al Carrito</button>
+        </div>
+        <div class="producto">
+            <img src="Imagenes/Black castle.jpg" alt="Black Castle Canela" style="width: 100%;">
+            <h2>Wisky Black castel de Canela</h2>
+            <p>Precio: $25</p>
+            <button class="agregar">Agregar al Carrito</button>
+        </div>
+        <div class="producto">
+            <img src="Imagenes/Vino Reservado.jpg" alt="Vino Reservado" style="width: 100%;">
+            <h2>Vino Reservado</h2>
+            <p>Precio: $25</p>
+            <button class="agregar">Agregar al Carrito</button>
+        </div>
+    </div>
 
     <script src="carrito.js"></script>
 </body>
