--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Croissant+One&display=swap" rel="stylesheet">
     <script defer src="Index.js"></script>
+    <script defer src="Carrito-de-compras.js"></script>
 </head>
 <body>
     <header>
@@ -165,6 +166,11 @@
             <p>Precio: $25</p>
             <button class="agregar">Agregar al Carrito</button>
         </div>
+    </div>
+    <div id="carrito">
+        <h3>Carrito de Compras</h3>
+        <ul id="lista-carrito"></ul>
+        <p>Total: <span id="total">$0</span></p>
     </div>
 </main>
 <section class="registro">
