--- a/Index.html
+++ b/Index.html
@@ -10,63 +10,64 @@
 <body>
     <header>
         <div class="logo">
-            <img src="/Imagenes/Logo La Huequita 200px.png" alt="Logo de La Huequita Quiteña">
+            <img src="./Imagenes/Logo La Huequita 200px.png" alt="Logo de La Huequita Quiteña">
             <h2 class="Nombre-empresa">La Huequita Quiteña</h2>
         </div>
         <div class="search-bar">
             <input type="text" id="searchInput" class="search-input" placeholder="Buscar...">
             <button class="search-button" onclick="buscar()">Buscar</button>
         </div>
-        <div id="results"></div>       
-    </header> 
-    <nav class="nav">
-        <ul class="menu">
-            <li class="boton-categoria">
-                <button id="todos" class="boton-menu active">Todos los productos</button>
-                <ul class="submenu">
-                    <li>
-                        <button id="todos" class="boton-menu active boton-categoría"><i class="bi bi-hand-index-thumb-fill"></i>Todos los productos</button>
-                    </li>
-                    <li>
-                        <button id="promociones" class="boton-menu boton-categoría"><i class="bi bi-hand-index-thumb"></i>Promociones</button>
-                    </li>
-                    <li>
-                        <button id="mas-vendidos" class="boton-menu boton-categoría"><i class="bi bi-hand-index-thumb"></i>Productos más vendidos</button>
-                    </li>
-                    <li>
-                        <button id="wisky" class="boton-menu boton-categoría"><i class="bi bi-hand-index-thumb"></i>Wisky</button>
-                    </li>
-                    <li>
-                        <button id="aguardiente" class="boton-menu boton-categoría"><i class="bi bi-hand-index-thumb"></i>Aguardiente</button>
-                    </li>
-                    <li>
-                        <button id="vinos" class="boton-menu boton-categoría"><i class="bi bi-hand-index-thumb"></i>Vinos</button></li>
-                    <li>
-                        <button id="ron" class="boton-menu boton-categoría"><i class="bi bi-hand-index-thumb"></i>Ron</button>
-                    </li>
-                    <li>
-                        <button id="licor-de-hiervas" class="boton-menu boton-categoría"><i class="bi bi-hand-index-thumb"></i>Licor de Hiervas</button>
-                    </li>
-                    <li>
-                        <button id="tequila" class="boton-menu boton-categoría"><i class="bi bi-hand-index-thumb"></i>Tequila</button>
-                    </li>
-                    <li>
-                        <button id="gin" class="boton-menu boton-categoría"><i class="bi bi-hand-index-thumb"></i>Gin</button>
-                    </li>
-                </ul>
-            </li>
-            <button id="todos" class="boton-menu active"></i>Politicas de devolución</button>
-            <button id="todos" class="boton-menu active"></i>Historia</button>
-            <button id="todos" class="boton-menu active"></i>Contactanos</button>
-            <!-- Puedes agregar más elementos de menú aquí -->
-        </ul>
-        <button><a class="boton-menu boton-carrito" href="carrito.html"><i class="bi bi-cart-fill"></i>Carrito<span id="numerito" class="numerito">0</span></a></button>
-    </nav>
-
+        <div id="results"></div>   
+    </header>
     <section class="fotos">
         <!-- Aquí puedes agregar tus imágenes -->
-        <img src="/Imagenes/La Huequita Quiteña.png" alt="La Huequita" style="width: 100%">
+        <img src="./Imagenes/La Huequita Quiteña.png" alt="La Huequita" style="width: 100%">
     </section>
+    <div class="todos-los-menus">
+        <button class="abrir-menu">Abrir</button>
+        <nav class="nav">
+            <div class="boton-categoria">
+                <button id="todos" class="boton-menu active">Todos los productos</button>
+                <nav class="sub-menu">
+                    <ul class="submenu">
+                        <li>
+                            <button id="todos" class="boton-menu active boton-categoría">Todos los productos</button>
+                        </li>
+                        <li>
+                            <button id="promociones" class="boton-menu boton-categoría">Promociones</button>
+                        </li>
+                        <li>
+                            <button id="mas-vendidos" class="boton-menu boton-categoría">Productos más vendidos</button>
+                        </li>
+                        <li>
+                            <button id="wisky" class="boton-menu boton-categoría">Wisky</button>
+                        </li>
+                        <li>
+                            <button id="aguardiente" class="boton-menu boton-categoría">Aguardiente</button>
+                        </li>
+                        <li>
+                            <button id="vinos" class="boton-menu boton-categoría">Vinos</button></li>
+                        <li>
+                            <button id="ron" class="boton-menu boton-categoría">Ron</button>
+                        </li>
+                        <li>
+                            <button id="licor-de-hiervas" class="boton-menu boton-categoría">Licor de Hiervas</button>
+                        </li>
+                        <li>
+                            <button id="tequila" class="boton-menu boton-categoría">Tequila</button>
+                        </li>
+                        <li>
+                            <button id="gin" class="boton-menu boton-categoría">Gin</button>
+                        </li>
+                        <button id="todos" class="boton-menu active"></i>Politicas de devolución</button>
+                        <button id="todos" class="boton-menu active"></i>Historia</button>
+                        <button id="todos" class="boton-menu active"></i>Contactanos</button>
+                    </ul>
+                </nav>
+            </div>
+        </nav>
+        <button><a class="boton-menu-carrito boton-carrito" href="carrito.html"><i class="bi bi-cart-fill"></i><span id="numerito" class="numerito">0</span></a></button>
+    </div> 
     <div class="wrapper">
         <main>
             <h2 class="titulo-principal" id="titulo-principal">Todos los productos</h2>
