--- a/Index.html
+++ b/Index.html
@@ -24,7 +24,6 @@
         <img src="./Imagenes/La Huequita Quiteña.png" alt="La Huequita" style="width: 100%">
     </section>
     <div class="todos-los-menus">
-        <button class="abrir-menu">Abrir</button>
         <nav class="nav">
             <div class="boton-categoria">
                 <button id="todos" class="boton-menu active">Todos los productos</button>
@@ -66,8 +65,10 @@
                 </nav>
             </div>
         </nav>
-        <button><a class="boton-menu-carrito boton-carrito" href="carrito.html"><i class="bi bi-cart-fill"></i><span id="numerito" class="numerito">0</span></a></button>
     </div> 
+    <button>
+        <a class="boton-menu boton-carrito active" href="carrito.html"><i class="bi bi-cart-fill"></i>Carrito</a>
+    </button>
     <div class="wrapper">
         <main>
             <h2 class="titulo-principal" id="titulo-principal">Todos los productos</h2>
