--- a/carrito.html
+++ b/carrito.html
@@ -10,22 +10,22 @@
 <body>
     <header>
         <div class="logo">
-            <img src="/Imagenes/Logo La Huequita 200px.png" alt="Logo de La Huequita Quiteña">
+            <img src="./Imagenes/Logo La Huequita 200px.png" alt="Logo de La Huequita Quiteña">
             <h2 class="Nombre-empresa">La Huequita Quiteña</h2>
         </div>            
     </header> 
     <section class="fotos">
         <!-- Aquí puedes agregar tus imágenes -->
-        <img src="/Imagenes/La Huequita Quiteña.png" alt="La Huequita" style="width: 100%">
+        <img src="./Imagenes/La Huequita Quiteña.png" alt="La Huequita" style="width: 100%">
     </section>
     <nav>
         <ul class="menu">
             <li>
                 <a class="boton-menu boton-volver" href="Index.html"><i class="bi bi-bag"></i>Seguir Comprando</a>
             </li>
-            <li>
+            <button>
                 <a class="boton-menu boton-carrito active" href="carrito.html"><i class="bi bi-cart-fill"></i>Carrito</a>
-            </li>
+            </button>
         </ul>
     </nav>
         <main>
