--- a/carrito.html
+++ b/carrito.html
@@ -19,6 +19,9 @@
         <img src="./Imagenes/La Huequita Quiteña.png" alt="La Huequita" style="width: 100%">
     </section>
     <nav>
+        <button>
+            <a class="boton-menu boton-carrito active" href="carrito.html"><i class="bi bi-cart-fill"></i>Carrito</a>
+        </button>
         <ul class="menu">
             <li>
                 <a class="boton-menu boton-volver" href="Index.html"><i class="bi bi-bag"></i>Seguir Comprando</a>
