--- a/Index.html
+++ b/Index.html
@@ -64,7 +64,7 @@
                     </ul>
                 </nav>
             </div>
-            <li><a class="boton-menu boton-carrito" href="carrito.html"><i class="bi bi-cart-fill"></i>Carrito<span id="numerito" class="numerito">0</span></a></li>
+            <li class="li-carrito"><a class="boton-menu boton-carrito" href="carrito.html"><i class="bi bi-cart-fill"></i>Carrito<span id="numerito" class="numerito">0</span></a></li>
         </nav>
     </div> 
     <div class="wrapper">
