--- a/carrito.html
+++ b/carrito.html
@@ -66,6 +66,7 @@
                         <p id="total">$50</p>
                     </div>
                     <button id="carrito-acciones-comprar" class="carrito-acciones-comprar">Comprar Ahora</button>
+                    <a href="#" id="finalizar-compra">Finalizar Compra por WhatsApp</a>
                 </div>
             </div>
                 <p id="carrito-comprado" class="carrito-comprado disabled">Muchas gracias por tu compra. <i class="bi bi-emoji-grin"></i></p>
