--- a/Index.html
+++ b/Index.html
@@ -56,6 +56,12 @@
                             <button id="tequila" class="boton-menu boton-categoría">Tequila</button>
                         </li>
                         <li>
+                            <button id="vodka" class="boton-menu boton-categoría">Vodka</button>
+                        </li>
+                        <li>
+                            <button id="zhumir" class="boton-menu boton-categoría">Zhumir</button>
+                        </li>
+                        <li>
                             <button id="gin" class="boton-menu boton-categoría">Gin</button>
                         </li>
                         <button id="todos" class="boton-menu active"></i>Politicas de devolución</button>
