--- a/carrito.html
+++ b/carrito.html
@@ -36,22 +36,7 @@
                 <div id="carrito-productos" class="carrito-productos disabled">
                     <div class="carrito-producto">
                         <img class="carrito-producto-imagen" src="Imagenes/Wisky/Jonnie01.webp" alt="">
-                        <div class="carrito-producto-titulo">
-                            <small>Titulo</small>
-                            <h3>Wisky Jonnie Rojo</h3>
-                        </div>
-                        <div class="carrito-producto-cantidad">
-                            <small>Cantidad</small>
-                            <p>1</p>
-                        </div>
-                        <div class="carrito-producto-precio">
-                            <small>Precio</small>
-                            <p>$25</p>
-                        </div>
-                        <div class="carrito-producto-subtotal">
-                            <small>Subtotal</small>
-                            <p>$25</p>
-                        </div>
+                        <!--Esto se va a rellenar con JS-->
                         <button class="carrito-producto-eliminar"><i class="bi bi-trash-fill"></i></button>
                     </div>
                 </div>
