Barra de busqueda y eliminación de productos

--- a/Index.html
+++ b/Index.html
@@ -17,6 +17,7 @@
             <input type="text" id="searchInput" class="search-input" placeholder="Buscar...">
             <button class="search-button" onclick="buscar()">Buscar</button>
         </div>
+        <div id="results"></div>
         <div id="results"></div>   
     </header>
     <section class="fotos">
