--- a/Index.html
+++ b/Index.html
@@ -64,8 +64,12 @@
                         <li>
                             <button id="gin" class="boton-menu boton-categoría">Gin</button>
                         </li>
-                        <button id="todos" class="boton-menu active"></i>Politicas de devolución</button>
+                        <a href="politicas-de-devolucion.html">
+                            <button id="todos" class="boton-menu active"></i>Politicas de devolución</button>
+                        </a>
+                        <a href="historia.html">
                         <button id="todos" class="boton-menu active"></i>Historia</button>
+                        </a> 
                         <button id="todos" class="boton-menu active"></i>Contactanos</button>
                     </ul>
                 </nav>
