--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" href="/Imagenes/Logo La Huequita ico.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/Imagenes/Logo La Huequita ico.ico" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
@@ -23,60 +25,72 @@
         <!-- Aquí puedes agregar tus imágenes -->
         <img src="./Imagenes/La Huequita Quiteña.png" alt="La Huequita" style="width: 100%">
     </section>
-    <div class="todos-los-menus">
-        <nav class="nav">
-            <div class="boton-categoria">
-                <button id="todos" class="boton-menu active">Todos los productos</button>
-                <nav class="sub-menu">
-                    <ul class="submenu">
-                        <li>
-                            <button id="todos" class="boton-menu active boton-categoría">Todos los productos</button>
-                        </li>
-                        <li>
-                            <button id="promociones" class="boton-menu boton-categoría">Promociones</button>
-                        </li>
-                        <li>
-                            <button id="mas-vendidos" class="boton-menu boton-categoría">Productos más vendidos</button>
-                        </li>
-                        <li>
-                            <button id="wisky" class="boton-menu boton-categoría">Wisky</button>
-                        </li>
-                        <li>
-                            <button id="aguardiente" class="boton-menu boton-categoría">Aguardiente</button>
-                        </li>
-                        <li>
-                            <button id="vinos" class="boton-menu boton-categoría">Vinos</button></li>
-                        <li>
-                            <button id="ron" class="boton-menu boton-categoría">Ron</button>
-                        </li>
-                        <li>
-                            <button id="licor-de-hiervas" class="boton-menu boton-categoría">Licor de Hiervas</button>
-                        </li>
-                        <li>
-                            <button id="tequila" class="boton-menu boton-categoría">Tequila</button>
-                        </li>
-                        <li>
-                            <button id="vodka" class="boton-menu boton-categoría">Vodka</button>
-                        </li>
-                        <li>
-                            <button id="zhumir" class="boton-menu boton-categoría">Zhumir</button>
-                        </li>
-                        <li>
-                            <button id="gin" class="boton-menu boton-categoría">Gin</button>
-                        </li>
-                        <a href="politicas-de-devolucion.html">
-                            <button id="todos" class="boton-menu active"></i>Politicas de devolución</button>
-                        </a>
-                        <a href="historia.html">
-                        <button id="todos" class="boton-menu active"></i>Historia</button>
-                        </a> 
-                        <button id="todos" class="boton-menu active"></i>Contactanos</button>
-                    </ul>
-                </nav>
-            </div>
-            <li class="li-carrito"><a class="boton-menu boton-carrito" href="carrito.html"><i class="bi bi-cart-fill"></i>Carrito<span id="numerito" class="numerito">0</span></a></li>
+    <div class="hamburguesa-icono">
+        <div class="barra"></div>
+        <div class="barra"></div>
+        <div class="barra"></div>
+    </div>
+    </header>
+    <div class="menu-main">
+        <nav class="menu-hamburguesa oculto">
+            <div class="cerrar-menu">X</div>
+            <ul class="menu-principal">
+                <li>
+                    <button id="todos" class="boton-menu active boton-categoría">Todos los productos</button>
+                </li>
+                <li>
+                    <button id="promociones" class="boton-menu boton-categoría">Promociones</button>
+                </li>
+                <li>
+                    <button id="mas-vendidos" class="boton-menu boton-categoría">Productos más vendidos</button>
+                </li>
+                <li>
+                    <button id="wisky" class="boton-menu boton-categoría">Wisky</button>
+                </li>
+                <li>
+                    <button id="aguardiente" class="boton-menu boton-categoría">Aguardiente</button>
+                </li>
+                <li>
+                    <button id="vinos" class="boton-menu boton-categoría">Vinos</button>
+                </li>
+                <li>
+                    <button id="ron" class="boton-menu boton-categoría">Ron</button>
+                </li>
+                <li>
+                    <button id="licor-de-hiervas" class="boton-menu boton-categoría">Licor de Hierbas</button>
+                </li>
+                <li>
+                    <button id="tequila" class="boton-menu boton-categoría">Tequila</button>
+                </li>
+                <li>
+                    <button id="vodka" class="boton-menu boton-categoría">Vodka</button>
+                </li>
+                <li>
+                    <button id="zhumir" class="boton-menu boton-categoría">Zhumir</button>
+                </li>
+                <li>
+                    <button id="gin" class="boton-menu boton-categoría">Gin</button>
+                </li>
+                <li>
+                    <a href="politicas-de-devolucion.html" class="boton-menu active boton-categoría">Políticas de Devolución</a>
+                </li>
+                <li>
+                    <a href="historia.html" class="boton-menu active boton-categoría">Historia</a>
+                </li>
+                <li>
+                    <button id="contactanos" class="boton-menu active boton-categoría">Contáctanos</button>
+                </li>
+            </ul>
         </nav>
-    </div> 
+    </div>
+
+    <div class="carrito-contenedor">
+        <a class="boton-menu boton-carrito" href="carrito.html">
+            <i class="bi bi-cart-fill" style="margin-right: 10px;"></i>
+            <span id="numerito" class="numerito">0</span>
+        </a>
+    </div>
+    
     <div class="wrapper">
         <main>
             <h2 class="titulo-principal" id="titulo-principal">Todos los productos</h2>
@@ -84,8 +98,9 @@
                 <!--Esto se va a rellenar con JS-->
             </div>
         </main>
-        <script src="main.js"></script>
+    
     </div>
+    <script src="main.js"></script>
 </body>
 <footer><p class="text-footer">2023 La Huequita Quiteña. Todos los derechos reservados. Marca registrada &#174;</p></footer>
 </html>
