--- a/carrito.html
+++ b/carrito.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" href="/Imagenes/Logo La Huequita ico.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/Imagenes/Logo La Huequita ico.ico" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
@@ -21,11 +23,11 @@
     <nav>
         <ul class="menu">
             <li>
+                <a class="boton-menu boton-carrito" href="carrito.html"><i class="bi bi-cart-fill"></i>Carrito</a>
+            </li>
+            <li>
                 <a class="boton-menu boton-volver" href="Index.html"><i class="bi bi-bag"></i>Seguir Comprando</a>
             </li>
-            <button>
-                <a class="boton-menu boton-carrito active" href="carrito.html"><i class="bi bi-cart-fill"></i>Carrito</a>
-            </button>
         </ul>
     </nav>
         <main>
@@ -36,7 +38,22 @@
                 <div id="carrito-productos" class="carrito-productos disabled">
                     <div class="carrito-producto">
                         <img class="carrito-producto-imagen" src="Imagenes/Wisky/Jonnie01.webp" alt="">
-                        <!--Esto se va a rellenar con JS-->
+                        <div class="carrito-producto-titulo">
+                            <small>Título</small>
+                            <h3>Alsdasd</h3>
+                        </div>
+                        <div class="carrito-producto-cantidad">
+                            <small>Cantidad</small>
+                            <p>1</p>
+                        </div>
+                        <div class="carrito-producto-precio">
+                            <small>Precio</small>
+                            <p>$20</p>
+                        </div>
+                        <div class="carrito-producto-subtotal">
+                            <small>Subtotal</small>
+                            <p>$20</p>
+                        </div>
                         <button class="carrito-producto-eliminar"><i class="bi bi-trash-fill"></i></button>
                     </div>
                 </div>
