--- a/politicas-de-devolucion.html
+++ b/politicas-de-devolucion.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" href="/Imagenes/Logo La Huequita ico.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/Imagenes/Logo La Huequita ico.ico" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
