--- a/Index.html
+++ b/Index.html
@@ -39,12 +39,6 @@
                     <button id="todos" class="boton-menu active boton-categoría">Todos los productos</button>
                 </li>
                 <li>
-                    <button id="promociones" class="boton-menu boton-categoría">Promociones</button>
-                </li>
-                <li>
-                    <button id="mas-vendidos" class="boton-menu boton-categoría">Productos más vendidos</button>
-                </li>
-                <li>
                     <button id="wisky" class="boton-menu boton-categoría">Wisky</button>
                 </li>
                 <li>
@@ -70,6 +64,15 @@
                 </li>
                 <li>
                     <button id="gin" class="boton-menu boton-categoría">Gin</button>
+                </li>
+                <li>
+                    <button id="promociones" class="boton-menu boton-categoría">Promociones</button>
+                </li>
+                <li>
+                    <button id="mas-vendidos" class="boton-menu boton-categoría">Productos más vendidos</button>
+                </li>
+                <li>
+                    <a href="blog.html" class="boton-menu boton-categoría">Blog</a>
                 </li>
                 <li>
                     <a href="politicas-de-devolucion.html" class="boton-menu active boton-categoría">Políticas de Devolución</a>
