--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="main.css">
     <title>La Huequita Quiteña - Licorería</title>
+    <link rel="canonical" href="https://lahuequitaquitena.netlify.app/" />
 </head>
 <body>
     <header>
