--- a/blog.html
+++ b/blog.html
@@ -48,16 +48,17 @@
     </div>
     <section class="blog-entries">
         <div class="blog-entry">
+            <h3>Ecuador y Venezuela: Un Duelo Épico que Despierta la Pasión Nacional y Celebra con La Huequita Quiteña</h3>
+            <img src="Imagenes/Blog/Ecuador vs Venezuela.webp" alt="Ecuador vs Venezuela Eliminatorias Sudamericanas CONMEBOL" width="50%">
+            <p>En el vasto campo del fútbol, donde la rivalidad se mezcla con la camaradería, hay enfrentamientos que trascienden lo ordinario. Hoy, nuestros ojos están puestos en un encuentro que va más allá de las eliminatorias de la CONMEBOL: el enfrentamiento entre las selecciones de Ecuador y Venezuela. Es un duelo que despierta la pasión nacional, un partido que define no solo posiciones en la tabla, sino el orgullo y la identidad de toda una nación.</p>
+            <a class="styled-link" href="entrada2.html">Leer más</a>
+        </div>
+        <div class="blog-entry">
             <h3>Explorando los Sabores del Vino y Licores en Mi Viaje por América del Sur con La Huequita Quiteña</h3>
-            <img src="/Imagenes/Blog/La-huequita-quiteña-SudAmerica.jpg" alt="Sudamerica Alcoholica - La Huequita Quiteña">
-            <p>¡Hola a todos! Mi nombre es Luis, y soy un viajero, mochilero y nómada digital que emprendió un emocionante viaje desde Quito, Ecuador, a través de Sudamérica para explorar el apasionante mundo de los licores, el vino, la cultura y la gastronomía en nuestra hermosa región. Lo mejor de todo es que este viaje es posible gracias a mi trabajo en la Licorería "La Huequita Quiteña", lo que me ha permitido combinar mi pasión por los viajes con mi amor por los licores. Además, este empleo me proporciona los recursos necesarios para continuar mi exploración por los rincones más encantadores de América del Sur.</p>
-            <img src="/Imagenes/Blog/Mochilero por Sudamerica - La Huequita Quiteña.jpg" alt="Mochilero por sudamerica - La huequita Quiteña">
-            <h4>¿Qué es La Huequita Quiteña?</h4>
-            <p>"La Huequita Quiteña" es mucho más que una simple licorería. Es un lugar donde los amantes de los licores encuentran una selección excepcional de bebidas, un equipo apasionado por el mundo de los licores y un compromiso constante con la calidad y la satisfacción del cliente. Aquí, no solo encontrarás una amplia variedad de licores y vinos, sino también la conveniencia de entrega a domicilio en todo Quito.</p>
-            <img src="imagen2.jpg" alt="Descripción de la Imagen 2">
+            <img src="/Imagenes/Blog/La-huequita-quiteña-SudAmerica.jpg" alt="Sudamerica Alcoholica - La Huequita Quiteña" width="30%">
+            <p>¡Hola a todos! Mi nombre es Luis, y soy un viajero, mochilero y nómada digital que emprendió un emocionante viaje desde Quito, Ecuador, a través de Sudamérica para explorar el apasionante mundo de los licores, el vino, la cultura y la gastronomía en nuestra hermosa región. Lo mejor de todo es que este viaje es posible gracias a mi trabajo en la Licorería "La Huequita Quiteña", lo que me ha permitido combinar mi pasión por los viajes con mi amor por los licores...</p>
             <a class="styled-link" href="entrada1.html">Leer más</a>
         </div>
-        <!-- Más entradas de blog... -->
     </section>
     <script src="blog.js"></script>
 </body>
