--- a/entrada1.html
+++ b/entrada1.html
@@ -52,7 +52,7 @@
         <p>¡Hola a todos! Mi nombre es Luis, y soy un viajero, mochilero y nómada digital que emprendió un emocionante viaje desde Quito, Ecuador, a través de Sudamérica para explorar el apasionante mundo de los licores, el vino, la cultura y la gastronomía en nuestra hermosa región. Lo mejor de todo es que este viaje es posible gracias a mi trabajo en la Licorería "La Huequita Quiteña", lo que me ha permitido combinar mi pasión por los viajes con mi amor por los licores. Además, este empleo me proporciona los recursos necesarios para continuar mi exploración por los rincones más encantadores de América del Sur.</p>
         <img src="/Imagenes/Blog/Mochilero por Sudamerica - La Huequita Quiteña.jpg" alt="Mochilero por sudamerica - La huequita Quiteña">
         <h4>¿Qué es La Huequita Quiteña?</h4>
-        <p>"La Huequita Quiteña" es mucho más que una simple licorería. Es un lugar donde los amantes de los licores encuentran una selección excepcional de bebidas, un equipo apasionado por el mundo de los licores y un compromiso constante con la calidad y la satisfacción del cliente. Aquí, no solo encontrarás una amplia variedad de licores y vinos, sino también la conveniencia de entrega a domicilio en todo Quito.</p>
+        <p>"La Huequita Quiteña" es mucho más que una simple licorería. Es un lugar donde los amantes de los licores encuentran una selección excepcional de bebidas, un equipo apasionado por el mundo de los licores y un compromiso constante con la calidad y la satisfacción del cliente. Estamos ubicados en Carcelen Alto. Aquí, no solo encontrarás una amplia variedad de licores y vinos, sino también la conveniencia de entrega a domicilio en todo Quito.</p>
         <img src="/Imagenes/Blog/La Huequita Quiteña.jpg" alt="La Huequita Quiteña">
         <h4>Apoya mi Aventura y Descubre Nuestro Catálogo</h4>
         <p>Quiero invitarte a explorar nuestro catálogo en línea, que ofrece una amplia gama de licores de alta calidad. Cada compra que realices en "La Huequita Quiteña" no solo te brinda la oportunidad de disfrutar de excelentes licores, sino que también me ayuda a continuar descubriendo y compartiendo mis experiencias en este emocionante viaje. Para acceder al catálogo y realizar tu pedido, simplemente visita <a href="index.html">nuestro sitio web</a>. Tu apoyo es fundamental y apreciado.</p>
@@ -61,8 +61,6 @@
 
         <a class="styled-link" href="blog.html">Volver al Blog</a>
     </section>
-    <footer>
         <footer><p class="text-footer">2023 La Huequita Quiteña. Todos los derechos reservados. Marca registrada &#174;</p></footer>    <!-- Pie de página común a todas las páginas -->
-    </footer>
 </body>
 </html>
