--- a/ecuador-vs-venezuela.html
+++ b/ecuador-vs-venezuela.html
@@ -46,10 +46,10 @@
             </ul>
         </nav>
     </div>
-    <section class="blog-entrada">
+    <section class="blog-entry">
         <h3>Ecuador y Venezuela: Un Duelo Épico que Despierta la Pasión Nacional y Celebra con La Huequita Quiteña</h3>
         <p>En el vasto campo del fútbol, donde la rivalidad se mezcla con la camaradería, hay enfrentamientos que trascienden lo ordinario. Hoy, nuestros ojos están puestos en un encuentro que va más allá de las eliminatorias de la CONMEBOL: el enfrentamiento entre las selecciones de Ecuador y Venezuela. Es un duelo que despierta la pasión nacional, un partido que define no solo posiciones en la tabla, sino el orgullo y la identidad de toda una nación.</p>
-        <img src="Imagenes/Blog/Ecuador vs Venezuela.webp" alt="Ecuador vs Venezuela Eliminatorias Sudamericanas CONMEBOL" width="100%">
+        <img src="Imagenes/Blog/Ecuador vs Venezuela.webp" alt="Ecuador vs Venezuela Eliminatorias Sudamericanas CONMEBOL">
         <p>Desde la huequita quiteña, apoyamos con fervor a nuestra selección de Ecuador en este emocionante partido. Nos encontramos en Carcelén Alto, en la hermosa ciudad de Quito, y queremos que vivas esta experiencia única con nosotros. Recuerda que desde nuestra tierra quiteña, hacemos entregas a domicilio a través de Rappi y Uber Eats, para que disfrutes de cada momento de este partido sin salir de casa.</p>
         <p>En las actuales eliminatorias, la lucha por asegurar un lugar en el próximo torneo mundial se intensifica, y para Ecuador, cada partido es una oportunidad de oro para consolidar su presencia en la élite del fútbol. El choque contra Venezuela no solo es un enfrentamiento en el terreno de juego, sino una representación simbólica de la determinación ecuatoriana.</p>
         <p>En este viaje emocional, la reciente expansión de los cupos para el próximo torneo mundial ha añadido un matiz adicional a la competición. Con siete plazas en juego, la batalla se vuelve más encarnizada, y equipos como Ecuador se ven inmersos en un desafío que trasciende las expectativas. Cada punto ganado es un paso más hacia el sueño mundialista, y cada encuentro es una oportunidad de oro para demostrar la calidad futbolística que reside en el corazón de la selección ecuatoriana.</p>
