--- a/blog.html
+++ b/blog.html
@@ -51,7 +51,7 @@
             <h3>Ecuador y Venezuela: Un Duelo Épico que Despierta la Pasión Nacional y Celebra con La Huequita Quiteña</h3>
             <img src="Imagenes/Blog/Ecuador vs Venezuela.webp" alt="Ecuador vs Venezuela Eliminatorias Sudamericanas CONMEBOL" width="50%">
             <p>En el vasto campo del fútbol, donde la rivalidad se mezcla con la camaradería, hay enfrentamientos que trascienden lo ordinario. Hoy, nuestros ojos están puestos en un encuentro que va más allá de las eliminatorias de la CONMEBOL: el enfrentamiento entre las selecciones de Ecuador y Venezuela. Es un duelo que despierta la pasión nacional, un partido que define no solo posiciones en la tabla, sino el orgullo y la identidad de toda una nación.</p>
-            <a class="styled-link" href="entrada2.html">Leer más</a>
+            <a class="styled-link" href="ecuador-vs-venezuela.html">Leer más</a>
         </div>
         <div class="blog-entry">
             <h3>Explorando los Sabores del Vino y Licores en Mi Viaje por América del Sur con La Huequita Quiteña</h3>
