--- a/ecuador-vs-venezuela.html
+++ b/ecuador-vs-venezuela.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="main.css">
     <title>Entrada de Blog - Título</title>
+    <!-- Etiquetas Open Graph para compartir en Facebook -->
+    <meta property="og:title" content="Ecuador y Venezuela: Un Duelo Épico que Despierta la Pasión Nacional y Celebra con La Huequita Quiteña">
+    <meta property="og:description" content="En el vasto campo del fútbol, donde la rivalidad se mezcla con la camaradería, hay enfrentamientos que trascienden lo ordinario.">
+    <meta property="og:image" content="https://lahuequitaquitena.netlify.app/Imagenes/Blog/Hinchada%20de%20Ecuador.jpg"> <!-- Reemplaza con la URL de tu primera imagen -->
+    <meta property="og:url" content="https://lahuequitaquitena.netlify.app/ecuador-vs-venezuela"> <!-- Reemplaza con la URL completa de esta entrada -->
 </head>
 <body>
     <header>
