--- a/Index.html
+++ b/Index.html
@@ -9,11 +9,20 @@
     <link rel="stylesheet" href="main.css">
     <title>La Huequita Quiteña - Licorería</title>
     <link rel="canonical" href="https://lahuequitaquitena.netlify.app/" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-686052764"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'AW-686052764');
+    </script>
+
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="./Imagenes/Logo La Huequita 200px.png" alt="Logo de La Huequita Quiteña">
+            <img src="./Imagenes/Logo La Huequita 200px.png" alt="Logo de Licorería La Huequita Quiteña - Licorería al norte de Quito con entregas a domicilio las 24 horas La Huequita Quiteña">
             <h2 class="Nombre-empresa">La Huequita Quiteña</h2>
         </div>
         <div class="search-bar">
@@ -24,7 +33,7 @@
     </header>
     <section class="fotos">
         <!-- Aquí puedes agregar tus imágenes -->
-        <img src="./Imagenes/La Huequita Quiteña.png" alt="La Huequita" style="width: 100%">
+        <img src="./Imagenes/La Huequita Quiteña.png" alt="La Huequita Quiteña JaggerMeister - Licorería al norte de Quito con entregas a domicilio las 24 horas La Huequita Quiteña" style="width: 100%">
     </section>
     <div class="hamburguesa-icono">
         <div class="barra"></div>
