--- a/ecuador-vs-venezuela.html
+++ b/ecuador-vs-venezuela.html
@@ -13,6 +13,14 @@
     <meta property="og:description" content="En el vasto campo del fútbol, donde la rivalidad se mezcla con la camaradería, hay enfrentamientos que trascienden lo ordinario.">
     <meta property="og:image" content="https://lahuequitaquitena.netlify.app/Imagenes/Blog/Hinchada%20de%20Ecuador.jpg"> <!-- Reemplaza con la URL de tu primera imagen -->
     <meta property="og:url" content="https://lahuequitaquitena.netlify.app/ecuador-vs-venezuela"> <!-- Reemplaza con la URL completa de esta entrada -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-686052764"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'AW-686052764');
+    </script>    
 </head>
 <body>
     <header>
