--- a/carrito.html
+++ b/carrito.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="main.css">
     <title>La Huequita Quiteña - Licorería</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-686052764"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'AW-686052764');
+    </script>
+    <!-- Event snippet for Vista de una página conversion page -->
+    <script>
+        gtag('event', 'conversion', {'send_to': 'AW-686052764/-MQHCJ-86_wYEJyrkccC'});
+    </script>
 </head>
 <body>
     <header>
