--- a/blog.html
+++ b/blog.html
@@ -56,6 +56,11 @@
     </div>
     <section class="blog-entries">
         <div class="blog-entry">
+            <h3>Descubriendo el Alma del Canelazo en Quito con "Licorería La Huequita Quiteña": Una Aventura de Sabores y Tradiciones</h3>
+            <img src="/Imagenes/Blog/Canelazo.jpg" alt="El Canelazo - La Huequita Quiteña Licorería del Norte de Quito abierta las 24 horas con servicio a domicilio">
+            <p>¡Saludos a los exploradores del sabor desde el corazón de Quito, donde "Licorería La Huequita Quiteña" nos invita a sumergirnos en la autenticidad del canelazo! En este recorrido, desvelaremos el secreto detrás de esta bebida caliente que enamora a cada paladar, con un toque especial de Zhumir Naranjilla, el licor de caña que transforma cada sorbo en una experiencia única.</p>
+        </div>
+        <div class="blog-entry">
             <h3>Ecuador y Venezuela: Un Duelo Épico que Despierta la Pasión Nacional y Celebra con La Huequita Quiteña</h3>
             <img src="Imagenes/Blog/Ecuador vs Venezuela.webp" alt="Ecuador vs Venezuela Eliminatorias Sudamericanas CONMEBOL" width="50%">
             <p>En el vasto campo del fútbol, donde la rivalidad se mezcla con la camaradería, hay enfrentamientos que trascienden lo ordinario. Hoy, nuestros ojos están puestos en un encuentro que va más allá de las eliminatorias de la CONMEBOL: el enfrentamiento entre las selecciones de Ecuador y Venezuela. Es un duelo que despierta la pasión nacional, un partido que define no solo posiciones en la tabla, sino el orgullo y la identidad de toda una nación.</p>
