--- a/blog.html
+++ b/blog.html
@@ -57,7 +57,7 @@
     <section class="blog-entries">
         <div class="blog-entry">
             <h3>Descubriendo el Alma del Canelazo en Quito con "Licorería La Huequita Quiteña": Una Aventura de Sabores y Tradiciones</h3>
-            <img src="/Imagenes/Blog/Canelazo.jpg" alt="El Canelazo - La Huequita Quiteña Licorería del Norte de Quito abierta las 24 horas con servicio a domicilio">
+            <img src="/Imagenes/Blog/Canelazo.jpg" alt="El Canelazo - La Huequita Quiteña Licorería del Norte de Quito abierta las 24 horas con servicio a domicilio" width="50%">
             <p>¡Saludos a los exploradores del sabor desde el corazón de Quito, donde "Licorería La Huequita Quiteña" nos invita a sumergirnos en la autenticidad del canelazo! En este recorrido, desvelaremos el secreto detrás de esta bebida caliente que enamora a cada paladar, con un toque especial de Zhumir Naranjilla, el licor de caña que transforma cada sorbo en una experiencia única.</p>
             <a class="styled-link" href="Canelazo-quiteño.html">Leer más</a>
         </div>
