--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,45 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="main.css">
     <title>La Huequita Quiteña - Licorería</title>
+    <style>
+        /* Estilos para el botón flotante */
+        .whatsapp-icon {
+            position: fixed;
+            bottom: 100px;
+            right: 20px;
+            background-color: #25D366; /* Color de WhatsApp */
+            color: #fff;
+            border: none;
+            border-radius: 40%;
+            padding: 15px;
+            font-size: 18px;
+            cursor: pointer;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-decoration: none;
+            z-index: 1000;
+        }
+        .instagram-icon {
+            position: fixed;
+            bottom: 200px;
+            right: 20px;
+            background-color: #070707; /* Color de WhatsApp */
+            color: #fff;
+            border: none;
+            border-radius: 40%;
+            padding: 15px;
+            font-size: 18px;
+            cursor: pointer;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-decoration: none;
+            z-index: 1000;
+        }
+    </style>
     <link rel="canonical" href="https://lahuequitaquitena.netlify.app/" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-686052764"></script>
@@ -96,6 +135,17 @@
             </ul>
         </nav>
     </div>
+    <div >
+        <a href="https://www.instagram.com/lahuequita_quitena/" target="_blank" class="instagram-btn">       
+            <img class="instagram-icon" src="./Imagenes/instagram-icon-transparent-vector-12.jpg" width="7%" alt="WhatsApp">
+        </a>
+    </div>
+    <div >
+        <a href="https://wa.me/593983628816" target="_blank" class="whatsapp-btn">       
+            <img class="whatsapp-icon" src="./Imagenes/whatsapp-navidadjpg.webp" width="7%" alt="WhatsApp">
+        </a>
+    </div>
+
 
     <div class="carrito-contenedor">
         <a class="boton-menu boton-carrito" href="carrito.html">
