botones insta y wsp

--- a/Index.html
+++ b/Index.html
@@ -11,12 +11,12 @@
     <link rel="canonical" href="https://lahuequitaquitena.netlify.app/" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-686052764"></script>
-    <!--<script>
+    <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
       gtag('config', 'AW-686052764');
-    </script> -->
+    </script>
 
 </head>
 <body>
@@ -96,13 +96,16 @@
             </ul>
         </nav>
     </div>
-<!--     <a href="https://www.instagram.com/lahuequita_quitena/" target="_blank" class="instagram-btn">       
-       <img class="instagram-icon" src="./Imagenes/instagram-icon-transparent-vector-12.jpg" alt="WhatsApp">
-    </a>
-
-    <a href="https://wa.me/593983628816" target="_blank" class="whatsapp-btn">       
-        <img class="whatsapp-icon" src="./Imagenes/whatsapp-navidadjpg.webp" alt="WhatsApp">
-    </a> -->
+    <div class="instagram-div">
+        <a href="https://www.instagram.com/lahuequita_quitena/" target="_blank" class="instagram-btn">       
+            <img class="instagram-icon" src="./Imagenes/instagram-icon-transparent-vector-12.jpg" alt="WhatsApp">
+        </a>
+    </div>
+    <div class="whatsapp-div">
+        <a href="https://wa.me/593983628816" target="_blank" class="whatsapp-btn">       
+            <img class="whatsapp-icon" src="./Imagenes/whatsapp-navidadjpg.webp" alt="WhatsApp">
+        </a>
+    </div>
 
     <div class="carrito-contenedor">
         <a class="boton-menu boton-carrito" href="carrito.html">
